--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 #export CMAKE_PREFIX_PATH=path to Qt/5.5/gcc_64/ (where you would find bin/qmake)
 cmake_minimum_required(VERSION 3.1)
 project(nexus)
+set(CMAKE_AUTOMOC ON)
 
 option(BUILD_NXS_BUILD "" ON)
 option(BUILD_NXS_EDIT "" ON)
